crates/tui/snapshots/fullscreen/mode/clipboard_result_belongs_to_new_task_draft.snap
---
source: crates/tui/src/app/mode_tests.rs
expression: render(&app)
---
  .                                  [Dashboard]  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
  ──────────────────────────────────────────────  
  > new task [Image #1]                           
  ───────────────────────────── Automatic model   
                                                  
  ⏸ Manual
