crates/tui/snapshots/fullscreen/mode/command_result_detail_indent.snap
---
source: crates/tui/src/app/mode_tests.rs
expression: render(&app)
---
  .                                  [Dashboard]  
                                                  
> /command                                        
 └─ first result                                  
    second result                                 
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
  ──────────────────────────────────────────────  
  >                                               
  ───────────────────────────── Automatic model   
                                                  
  ⏸ Manual · ← Dashboard · ? for shortcuts
