crates/tui/snapshots/fullscreen/mode/fullscreen_panel_before_preview_handoff.snap
---
source: crates/tui/src/app/mode_tests.rs
expression: render(&app)
---
  .                                  [Dashboard]  
  ┌── Help ────────────────────────────────[✗]─┐  
  │                                            │  
  │   Commands                                 │  
  │                                            │  
  │> First                                     │  
  │  Second                                    │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  └────────────────────────────────────────────┘  
  ───────────────────────────── Automatic model   
                                                  
  Tab/Shift+Tab to switch  ·  Esc to close
