crates/tui/snapshots/fullscreen/mode/fullscreen_scroll_with_shared_draft.snap
---
source: crates/tui/src/app/mode_tests.rs
expression: render(&app)
---
  .                                  [Dashboard]  
                                                  
● message 10                                      
                                                  
● message 11                                      
                                                  
● message 12                                      
                                                  
             Jump to bottom (click) ↓             
  Queue 1: queued message · next                  
                                                  
  ──────────────────────────────────────────────  
  > shared draft                                  
  ───────────────────────────── Automatic model   
                                                  
  ⏸ Manual
