crates/tui/snapshots/fullscreen/mode/home_draft_is_separate_from_current_conversation.snap
---
source: crates/tui/src/app/mode_tests.rs
expression: render(&app)
---
  .                                  [Dashboard]  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
  ──────────────────────────────────────────────  
  > new task draft                                
  ───────────────────────────── Automatic model   
                                                  
  ⏸ Manual
