crates/tui/snapshots/fullscreen/mode/model_options_Fullscreen.snap
---
source: crates/tui/src/app/mode_tests.rs
expression: output
---
"  .                                                                                                        [Dashboard]  "
"                                                                                                                        "
"               ┌── Model ───────────────────────────────────────────────────────────────────────────[✗]─┐               "
"               │                                                                                        │               "
"               │  ╭───────────────────────────────────────────────────────────────────────────────────╮ │               "
"               │  │ Search models                                                                     │ │               "
"               │  ╰───────────────────────────────────────────────────────────────────────────────────╯ │               "
"               │> GPT-6 Astra      ██ ██ ██   Medium  [Fast off]  [Long context off]                    │               "
"               │                                                                                        │               "
"               │                                                                                        │               "
"               │                                                                                        │               "
"               │                                                                                        │               "
"               │                                                                                        │               "
"               │                                                                                        │               "
"               │                                                                                        │               "
"  ─────────────│                                                                                        │─────────────  "
"  > preserved d└────────────────────────────────────────────────────────────────────────────────────────┘               "
"  ─────────────────────────────────────────────────────────────────────────────────────────────────── Automatic model   "
"                                                                                                                        "
"  ↑↓ select · Tab setting · ←→ adjust · / search · p pin · Enter apply · Esc cancel                                     "
